--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 this.scrollY = 0;
                 this.targetY = 0;
                 this.velocity = 0;
-                this.friction = 0.9;
-                this.ease = 0.1;
+                this.friction = 0.92;  // 마찰력 증가로 더 빨리 멈춤
+                this.ease = 0.08;      // 부드러움 조금 줄임
                 this.maxScroll = 0;
                 this.isScrolling = false;
                 this.lastTime = 0;
@@ -200,10 +200,10 @@
             }
 
             handleWheel(e) {
-                const delta = e.deltaY * 2;
+                const delta = e.deltaY * 0.8; // 스크롤 감도 줄임
                 this.targetY += delta;
                 this.targetY = Math.max(0, Math.min(this.targetY, this.maxScroll));
-                this.velocity += delta * 0.3;
+                this.velocity += delta * 0.2; // 관성도 줄임
             }
 
             handleTouchStart(e) {
@@ -232,16 +232,16 @@
             }
 
             handleTouchEnd(e) {
-                // 터치 끝날 때 관성 적용
-                this.velocity = this.touchVelocity * 15;
+                // 터치 끝날 때 관성 적용 (감도 줄임)
+                this.velocity = this.touchVelocity * 8;
             }
 
             handleKeydown(e) {
                 const keyMap = {
-                    ArrowDown: 300,
-                    ArrowUp: -300,
-                    PageDown: window.innerHeight,
-                    PageUp: -window.innerHeight,
+                    ArrowDown: 200,  // 키보드 스크롤 거리 줄임
+                    ArrowUp: -200,
+                    PageDown: window.innerHeight * 0.8,
+                    PageUp: -window.innerHeight * 0.8,
                     Home: -this.targetY,
                     End: this.maxScroll - this.targetY
                 };
@@ -250,7 +250,7 @@
                     e.preventDefault();
                     this.targetY += keyMap[e.key];
                     this.targetY = Math.max(0, Math.min(this.targetY, this.maxScroll));
-                    this.velocity = keyMap[e.key] * 0.3;
+                    this.velocity = keyMap[e.key] * 0.15; // 관성도 줄임
                 }
             }
 
